@@ -17,6 +17,7 @@ Phoronix Test Suite (Git)
 - pts-core: Client support for being able to obtain OpenBenchmarking.org index/test/suite data from local Phoromatic Servers
 - pts-core: Improved dump-core-storage output
 - pts-core: Introduce machine_self_id as UUIDv5 compliant self-generated unique identifier for each PTS client
+- pts-core: Allow result file titles up to 126 characters in length
 - phoromatic: Begin allowing results to be stored locally, not dependent on OpenBenchmarking.org storage
 - phoromatic: Advertise Phoromatic Server using Avahi zero-conf networking service when avahi-publish available and AdvertiseServiceZeroConf user config option is TRUE
 - phoromatic: Automatically setup download-cache over Phoromatic HTTP with the system's local download-cache archive
